// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should match snapshot 1`] = `
<span
  className="badge"
>
  Default
</span>
`;

exports[`Badge should take regular element attributes 1`] = `
<span
  className="badge primary"
>
  Primary
</span>
`;
